--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "webpack": "^4.6.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
