--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "test": "test"
   },
   "scripts": {
-    "webpack": "webpack --mode=development --watch"
+    "webpack": "webpack --mode=development --watch",
+    "postinstall": "webpack --mode=production"
+  },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
   },
   "keywords": [],
   "author": "",
