--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-router-dom": "^4.2.2",
     "react-router-hash-link": "^1.2.0",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "webpack": "^4.6.0"
   },
@@ -36,6 +35,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack-cli": "^2.1.2"
+    "webpack-cli": "^2.1.2",
+    "redux-logger": "^3.0.6"
   }
 }
